* Swedish translation typos fixed (thanks Peter Hellberg)
* --- release 0.9 (2008-01-13) ---
* Possible to set language in environment.rb: L10N_LANG = :de
* UTF-8 database charset configuration is default in Rails 1.2+ and 2.0, so not needed in plugin more.
* L10n-Simplified plugin also available as gem from this release
* Moved changelog from README to separate file changelog.txt
* Removed duplicate line from lang_de.rb
* Russian translation (thanks Denis Pankratov)
* Corrected German date/time format (thanks Christian W Zuckschwerdt)
* Added Portugese translation (thanks Carlos Afonso)
* Italian translation adjustments (thanks Michele Franzin)
* Fixed translation error in Swedish translation (thanks Ingemar Edsborn)
* Czech translation by Karel Minařík
* French lang file updated (thanks Bruno Michel)
* Added Serbian (thanks Slobodan Kovacevic)
* Lang_it file must be UTF-8 encoded (thanks Fabio Bonelli)
* Added rake task for creating a release "rake package"
* Fixed rake task for generating rdoc in UTF-8 format
* Added Norwegian (thanks Fredrik Bach)
* --- release 0.8 ---
* Works with Rails 1.2 (not working with earlier versions)
* Whitespace/formatting modifications. Removed commented code not needed
* Removed code from plugin because Rails 1.2 date_select and datetime_select 
  now support :order
* ActiveRecord hooks updated for Rails 1.2 (thanks Casper Fabricius)
* Dots after day number in time formats (Danish), to keep it consistent with Date formats
* --- release 0.7.1 ---
* Fixed RJS bug where javascript content-header was overwritten with text/html (thanks Jakob Skjerning)
* Small language corrections by Wijnand Wiersma
* PostGres friendly: Added quotes around ActiveRecord::Base.connection.execute "SET NAMES 'UTF8'" (thanks Wijnand Wiersma)
* German language errors corrected by Matthias Tarasiewicz
* Added "no step three" in installation section :)
* --- release 0.7 ---
* Fixed messed-up ø's and a few wording changes in README 